// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.participant.admin.v0;

service PingService {
  rpc ping(PingRequest) returns (PingResponse);
}

message PingRequest {
  repeated string target_parties = 1;
  repeated string validators = 2;
  uint64 timeout_milliseconds = 3;
  uint64 levels = 4;
  uint64 grace_period_milliseconds = 5;
  string workflow_id = 6; // optional
  string id = 7; // optional UUID to be used for ping test
}

message PingSuccess {
  uint64 ping_time = 1;
  string responder = 2;
}

message PingFailure {}

message PingResponse {
  oneof response {
    PingSuccess success = 1;
    PingFailure failure = 2;
  }
}
